--- a/package.json
+++ b/package.json
@@ -1,76 +1,99 @@
 {
-  "name": "cepek-aja",
-  "version": "0.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/irfanandriansyah1997/cepek-aja.git"
-  },
-  "keywords": [
-    "react",
-    "atomic"
-  ],
-  "author": "cepekaja.com",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/irfanandriansyah1997/cepek-aja/issues"
-  },
-  "homepage": "https://github.com/irfanandriansyah1997/cepek-aja#readme",
-  "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.2.3",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/preset-stage-2": "^7.0.0",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.5",
-    "babel-plugin-transform-decorators-legacy": "^1.3.5",
-    "babel-plugin-transform-es2015-classes": "^6.24.1",
-    "babel-plugin-transform-es2015-destructuring": "^6.23.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-es2017": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "css-loader": "^2.1.0",
-    "eslint": "^5.11.1",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-loader": "^2.1.1",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7.12.2",
-    "express": "^4.16.4",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "html-webpack-plugin": "^3.2.0",
-    "node-sass": "^4.11.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "preload-webpack-plugin": "^2.3.0",
-    "rimraf": "^2.6.3",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1",
-    "uglifyjs-webpack-plugin": "^2.1.1",
-    "webpack": "^4.28.3",
-    "webpack-cli": "^3.2.0",
-    "webpack-dev-server": "^3.1.14",
-    "webpack-merge": "^4.1.5"
-  },
-  "dependencies": {
-    "axios": "^0.18.0",
-    "prop-types": "^15.6.2",
-    "react": "^16.7.0",
-    "react-custom-scrollbars": "^4.2.1",
-    "react-dom": "^16.7.0",
-    "react-redux": "^6.0.0",
-    "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
-  }
+    "name": "cepek-aja",
+    "version": "0.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "dev": "node_modules/.bin/webpack-dev-server --progress --config build/webpack.config.dev.js",
+        "prod": "node_modules/.bin/webpack --config build/webpack.config.prod.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/irfanandriansyah1997/cepek-aja.git"
+    },
+    "keywords": [
+        "react",
+        "atomic"
+    ],
+    "author": "cepekaja.com",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/irfanandriansyah1997/cepek-aja/issues"
+    },
+    "homepage": "https://github.com/irfanandriansyah1997/cepek-aja#readme",
+    "devDependencies": {
+        "@babel/core": "^7.2.2",
+        "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+        "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+        "@babel/preset-env": "^7.2.3",
+        "@babel/preset-react": "^7.0.0",
+        "@babel/preset-stage-2": "^7.0.0",
+        "babel-cli": "^6.26.0",
+        "babel-core": "^6.26.0",
+        "babel-eslint": "^7.2.3",
+        "babel-loader": "^8.0.0-beta.2",
+        "babel-plugin-transform-decorators-legacy": "^1.3.4",
+        "babel-plugin-transform-es2015-classes": "^6.24.1",
+        "babel-plugin-transform-es2015-destructuring": "^6.23.0",
+        "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
+        "babel-preset-es2015": "^6.24.1",
+        "babel-preset-es2017": "^6.24.1",
+        "babel-preset-react": "^6.24.1",
+        "babel-preset-stage-0": "^6.24.1",
+        "babel-preset-stage-2": "^6.24.1",
+        "babel-upgrade": "0.0.24",
+        "codecov": "^3.1.0",
+        "copy-webpack-plugin": "^4.6.0",
+        "css-loader": "^2.1.0",
+        "eslint": "^5.11.1",
+        "eslint-config-airbnb": "^17.1.0",
+        "eslint-config-airbnb-base": "^13.1.0",
+        "eslint-config-standard": "^12.0.0",
+        "eslint-loader": "^2.1.1",
+        "eslint-plugin-import": "^2.14.0",
+        "eslint-plugin-jsx-a11y": "^6.1.2",
+        "eslint-plugin-node": "^8.0.0",
+        "eslint-plugin-promise": "^4.0.1",
+        "eslint-plugin-react": "^7.12.2",
+        "eslint-plugin-standard": "^4.0.0",
+        "eslint-plugin-vue": "^5.1.0",
+        "express": "^4.16.4",
+        "extract-text-webpack-plugin": "^4.0.0-beta.0",
+        "html-webpack-plugin": "^3.2.0",
+        "jest": "^23.6.0",
+        "jest-canvas-mock": "^1.1.0",
+        "jest-serializer-vue": "^2.0.2",
+        "jest-vue-preprocessor": "^1.4.0",
+        "jsdom": "^13.1.0",
+        "less": "^3.9.0",
+        "less-loader": "^4.1.0",
+        "mini-css-extract-plugin": "^0.5.0",
+        "node-sass": "^4.11.0",
+        "optimize-css-assets-webpack-plugin": "^5.0.1",
+        "pre-commit": "^1.2.2",
+        "preload-webpack-plugin": "^2.3.0",
+        "regenerator-runtime": "^0.13.1",
+        "rimraf": "^2.6.3",
+        "sass-loader": "^7.1.0",
+        "style-loader": "^0.23.1",
+        "stylus": "^0.54.5",
+        "stylus-loader": "^3.0.2",
+        "uglify-es": "^3.3.9",
+        "uglifyjs-webpack-plugin": "^2.1.1",
+        "url-loader": "^1.1.2",
+        "webpack": "^4.28.3",
+        "webpack-cli": "^3.2.0",
+        "webpack-dev-server": "^3.1.14",
+        "webpack-merge": "^4.1.5"
+    },
+    "dependencies": {
+        "axios": "^0.18.0",
+        "prop-types": "^15.6.2",
+        "react": "^16.7.0",
+        "react-custom-scrollbars": "^4.2.1",
+        "react-dom": "^16.7.0",
+        "react-redux": "^6.0.0",
+        "redux": "^4.0.1",
+        "redux-thunk": "^2.3.0"
+    }
 }
