--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
     "main": "index.js",
     "scripts": {
         "dev": "node_modules/.bin/webpack-dev-server --progress --config build/webpack.config.dev.js",
-        "prod": "node_modules/.bin/webpack --config build/webpack.config.prod.js"
+        "prod": "node_modules/.bin/webpack --config build/webpack.config.prod.js",
+        "lint": "node_modules/.bin/eslint --ext .js,.jsx src",
+        "precommit-msg": "echo 'Pre-commit checks...' && exit 0",
+        "precommit": "docker-compose run --rm web npm run lint"
     },
     "repository": {
         "type": "git",
