--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
     "version": "0.0.0",
     "description": "",
     "main": "index.js",
+    "pre-commit": [
+        "precommit-msg",
+        "precommit"
+    ],
     "scripts": {
         "dev": "node_modules/.bin/webpack-dev-server --progress --config build/webpack.config.dev.js",
         "prod": "node_modules/.bin/webpack --config build/webpack.config.prod.js",
         "lint": "node_modules/.bin/eslint --ext .js,.jsx src",
         "precommit-msg": "echo 'Pre-commit checks...' && exit 0",
-        "precommit": "docker-compose run --rm web npm run lint"
+        "precommit": "npm run lint"
     },
     "repository": {
         "type": "git",
